src/app/components/gallery-view/gallery-view.component.scss
:host {
  display: flex;
  flex: 1;
}

.buttonContainer {
  display: flex;
  //align-items: center;
}

.button {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border-radius: 0.5em;
  max-width: 10vw;
  width: 100%;
}

mat-icon {
  font-size: 5vw;
  width: 5vw;
  height: 5vw;
  margin: 0;
  color: white;
}

.tinyView {
  font-size: 1.5vw !important;
  width: 1.5vw !important;
  height: 1.5vw !important;
}

.button:hover {
  background-color: #555555;
}

.renderSpace {
  flex: 1;
  display: flex;
  flex-direction: column;
}

/* Container of Screen and Dish */
.conferenceView {
  display: flex;
  flex: 1;
  max-height: 100%;
  max-width: 100%;
}

/* Container of Cameras */
.dish {
  overflow: hidden;
  display: flex;
  align-content: center;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  vertical-align: middle;
  flex: 1;
}

/* Camera */
.dish>div {
  position: relative;
  vertical-align: middle;
  align-self: center;
  border-radius: 10px;
  overflow: hidden;
  display: inline-block;
  box-shadow: var(--shadow-dark);
  border: 2px solid transparent;
}

.animatedDiv {
  animation: show 0.4s ease;
}

.animatedVideo {
  -webkit-transition: margin-top 0.4s ease-in-out;
  -moz-transition: margin-top 0.4s ease-in-out;
  -o-transition: margin-top 0.4s ease-in-out;
  transition: margin-top 0.4s ease-in-out;
}

/* Video (check the nice property object-fit) */
.dish>div video, .videoUnavailable {
  position: absolute;
  right: 0;
  object-fit: cover;
  bottom: 0;
  width: 100%;
  height: 100%;
  background: transparent;
  border-radius: 10px;
  overflow: hidden;
  left: 0;
  top: 0;
  background-size: cover;
  overflow: hidden;
}

.videoUnavailable {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: #666666;
}

.isTalking {
  border-color: lawngreen !important;
}

/* Animation of Loading Video */
.dish>div video.loading {
  margin-top: 100%;
}

/* Aspect Ratio Number */
.usernameContainer {
  color: #aaa;
  font-size: 1em;
  font-family: Arial, Helvetica, sans-serif;
  position: absolute;
  left: 1%;
  bottom: 1%;
  font-weight: 100;
  display: block;
}

.tinyViewUsernameContainer {
  font-size: 0.75vw !important;
}

.controlButtons {
  position: absolute;
  top: 0.5em;
  display: flex;
  flex-direction: row;
  left: 50%;
  transform: translateX(-50%);
}

/* Gray Diagonal */
.dish div:before {
  position: absolute;
  height: 100%;
  //background: url(./../general/diagonal.jpg);
  background-size: 100% 100%;
  width: 100%;
  opacity: 0.3;
  font-weight: 100;
  content: '';
  display: block;
}

/* Screen */
.screen {
  flex: 2;
  background: #000;
  opacity: 0.8;
  border-radius: 10px;
}

/* Animation of Cameras */
@keyframes show {
  0% {
    opacity: 0;
    transform: scale(0.4) translateY(20px);
  }

  100% {
    opacity: 1;
    transform: scale(1) translateY(0);
  }
}

.button {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border-radius: 0.5em;
  max-width: 5vw;
  width: 100%;
  margin-left: 0.5em;
  margin-right: 0.5em;
}

.red {
  color: red;
}

